style.scss
---
---

@font-face {
    font-family: 'D-DIN Condensed';
    font-weight: bold;
    font-display: swap;
    src: url('/assets/D-DINCondensed-Bold.woff2') format('woff2');
}

$blue: #112441;
$red: #d11d43;
$brown: #9a7d7f;

* {
    box-sizing: border-box;
}

body {
    font-family: 'Crimson Pro', serif;
    font-size: 16pt;
    line-height: 1.5;
}

a {
    text-decoration: none;
    color: lighten($blue, 20%);

    &:hover {
        text-decoration: underline;
    }
}

h1, h2, h3, h4, nav {
    font-family: 'D-DIN Condensed';
    font-weight: bold;
    text-transform: uppercase;
    color: $blue;
}

nav {
    text-align: center;

    ul {
        list-style: none;
        padding: 0;
        margin: 0;
    }

    ul.icons li {
        display: inline-block;
        height: 1.5em;
        line-height: 1;

        img {
            vertical-align: middle;
            height: 1.5em;
        }
    }
}

.major-projects {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;

    list-style: none;
    padding: 0;

    li {
        margin-bottom: 1.5em;

        img {
            width: 100%;

            &:hover {
                filter: brightness(90%);
                transition: 0.2s;
            }
        }
    }
}

footer {
    font-size: 10pt;
    text-align: center;
    color: var($brown);
}

.center {
    text-align: center;
}

.floaty {
    filter: invert(100%);
    -webkit-animation-direction: alternate;
    animation-direction: alternate;
    -webkit-animation-name: floaty-ticket;
    animation-name: floaty-ticket;
    -webkit-animation-duration: 2s;
    animation-duration: 2s;
    -webkit-animation-iteration-count: infinite;
    animation-iteration-count: infinite;
    -webkit-animation-timing-function: ease-in-out;
    animation-timing-function: ease-in-out;
}

@-webkit-keyframes floaty-ticket {
    0% {
        transform: translateY(10px);
    }
}

@keyframes floaty-ticket {
    0% {
        transform: translateY(10px);
    }
}

.falsehoods li:nth-child(even){
    font-weight: bold;
}

@media (max-width: 1279px) {
    $gutter: 40px;

    body {
        margin: $gutter;
        grid-gap: $gutter;
        font-size: 16pt;
    }

    header {
        display: flex;
        align-items: center;

        .logo img {
            width: 180px;
            margin-right: $gutter;
        }
    }

    nav {
        font-size: 1.25em;
        line-height: 1.25;

        .nav-icon {
            img {
                line-height: 1.25;
            }
        }

        ul {
            display: flex;
            margin: 0;
            flex-wrap: wrap;
        }

        ul.links li {
            padding-right: 1ch;
        }
    }

    .major-projects {
        justify-content: center;

        li {
            width: 50%;

            &:nth-child(2n+1) {
                padding-right: $gutter / 2;
            }

            &:nth-child(2n) {
                padding-left: $gutter / 2;
            }
        }
    }

    .mission {
        font-size: 1.25em;
    }
}

@media (max-width: 768px) {
    $gutter: 20px;

    body {
        margin: $gutter;
        grid-gap: $gutter;
        font-size: 14pt;
    }

    header .logo img {
        width: 90px;
        margin-right: $gutter;
    }

    .major-projects li {
        width: 100%;
        padding: 0;
    }
}

@media (min-width: 1280px) {
    $sidebar: 240px;
    $gutter: 64px;
    $width: 1280px - (2 * $gutter);
    $main: $width - $sidebar - $gutter;

    body {
        width: $width;
        margin: $gutter auto;
        display: grid;
        grid-template-columns: $sidebar $main;
        grid-column-gap: $gutter;
    }

    header {
        grid-column: 1;

        .logo img {
            width: 100%;
        }
    }

    nav {
        margin-top: 1em;
        font-size: 2rem;
    }

    main {
        grid-column: 2;

        :first-child {
            margin-top: 0;
        }
    }

    $project-gutter: $gutter / 2;
    $project-width: ($main - $project-gutter) / 2;

    .mission {
        font-size: 1.5em;
    }

    .major-projects li {
        width: $project-width;
        margin-bottom: 1.5em;
    }

    footer {
        grid-column: 2;
    }
}

